// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Link Should match the dark snapshot 1`] = `
.c0 {
  color: #e0e0e0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  font-weight: 700;
}

.c0:hover {
  color: #ffffff;
}

.c0:visited {
  color: #e0e0e0;
}

<a
  class="c0"
  href="_blank"
  rel="noreferrer"
>
  Link
</a>
`;

exports[` Link Should match the default snapshot 1`] = `
.c0 {
  color: #1250C4;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  font-weight: 700;
}

.c0:hover {
  color: #DE0059;
}

.c0:visited {
  color: #5734BA;
}

<a
  class="c0"
  href="_blank"
  rel="noreferrer"
>
  Link
</a>
`;

exports[` Link Should match the default snapshot without underline 1`] = `
.c0 {
  color: #e0e0e0;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  font-weight: 700;
}

.c0:hover {
  color: #ffffff;
}

.c0:visited {
  color: #e0e0e0;
}

<a
  class="c0"
  href="_blank"
  rel="noreferrer"
>
  Link
</a>
`;
